[package]
name = "nullsec-hashcrack"
version = "1.0.0"
edition = "2021"
authors = ["bad-antics <bad-antics@users.noreply.github.com>"]
description = "Multi-threaded hash cracker - NullSec Project"
license = "MIT"
repository = "https://github.com/bad-antics/nullsec-tools"

[dependencies]
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
